--- a/src/main/resources/templates/notice/noticeViewForm.html
+++ b/src/main/resources/templates/notice/noticeViewForm.html
@@ -120,7 +120,7 @@
     //목록버튼
     const $submitBtn = document.getElementById('submit_btn');
       $submitBtn.addEventListener('click', e => {
-      location.href = '/notice';
+      location.href = '/notice/list';
     });
 
     //삭제버튼
