--- a/src/main/resources/templates/notice/noticeMainForm.html
+++ b/src/main/resources/templates/notice/noticeMainForm.html
@@ -81,8 +81,8 @@
                   th:href="@{/notice/{id}(id=${notice.noticeId})}"
                   onclick="" href="#" th:text="${notice.title}"></a></td>
               <td class="noticeUdate" th:text="${{notice.udate}}">2022.08.08</td>
-              <td th:text="${notice.write}">관리자</td>
-              <td th:text="${notice.count}">10</td>
+              <td>관리자</td>
+              <td th:class="count" th:text="${notice.count}">10</td>
             </tr>
             </tbody>
           </table>
@@ -95,8 +95,7 @@
           </div>
           <div class="text__center">
             <ul class="pagination">
-              <!--              <li><a href="">처음</a></li>-->
-              <!--              <li><a href="">이전</a></li>-->
+
               <!--이전페이지정보-->
               <th:block th:if="${fc.prev}">
                 <li>
@@ -109,11 +108,6 @@
                 </li>
               </th:block>
 
-              <!--              <li><a href="">1</a></li>-->
-              <!--              <li><a href="">2</a></li>-->
-              <!--              <li><a href="">3</a></li>-->
-              <!--              <li><a href="">4</a></li>-->
-              <!--              <li><a href="">5</a></li>-->
               <!--페이지표시-->
               <th:block th:each="pnum : ${#numbers.sequence(fc.startPage,fc.endPage)}">
                 <th:block th:if="${pnum != 0}">
@@ -139,8 +133,7 @@
                     마지막</a>
                 </li>
               </th:block>
-              <!--              <li><a href="">다음</a></li>-->
-              <!--              <li><a href="">마지막</a></li>-->
+
             </ul>
           </div>
           <!-- notice-board__search  -->
