--- a/src/main/resources/templates/notice/noticeWriteForm.html
+++ b/src/main/resources/templates/notice/noticeWriteForm.html
@@ -52,21 +52,20 @@
     </nav>
   </header>
   <main class="container">
-    <form class="notice-board content" method="post" >
+    <form class="notice-board content" method="post" th:object="${writeForm}">
       <div class="notice-board__title width--1000px">
         <h2><i class="bar"></i>글쓰기</h2>
       </div>
       <div class="notice-board__head width--900px">
-        <div class="notice-board__headtitle" >제목:
-          <input  type="text" name="title" id="" placeholder="제목을 입력하세요."  autofocus>
+        <div class="notice-board__headtitle">제목:
+          <input  type="text" name="title" id="noticeTitle" placeholder="제목을 입력하세요."  autofocus>
         </div>
       </div>
       <div class="notice-board__main width--1000px">
-          <textarea  class="notice-board__content" name="content" id="" cols="30" rows="10" placeholder="내용을 작성하세요. 500글자"
+          <textarea  class="notice-board__content" name="content" id="noticeContent" cols="30" rows="10" placeholder="내용을 작성하세요. 500글자"
                     autofocus maxlength="300"></textarea>
         <div class="notice__write-information">
-          <span class="font-size--12px" th:text="*{{createDate}}">2022.08.01 13:48</span>
-          <span class="font-size--12px" th:text="|조회  *{views}|">조회 98</span>
+
         </div>
         <div class="insert">
           <div>
@@ -113,24 +112,20 @@
   </div>
 </footer>
 <script>
-    /*notice__complete-btn.addEventListener('click' e =>{
-      if(!validChk()) return;
+    const $summitBtn = document.getElementById('notice__complete-btn');
+    $summitBtn.addEventListener('click', e => {
+      location.href = '/notice/{id}';
+    });
+    }
 
-      const attachmentValue = document.getElementsByTagName('img').length > 0 ? 'Y' : 'N';
-      const notice = {
-        noticeId :1,
-        noticeTitle : noticeTitle.value,
-        noticeContents : window.editor.getDate(),
-        attachment : attachmentValue
-      };
-      add(notice);
-    })
 
     const $cancelBtn = document.getElementById('notice__cancel-btn');
     $cancelBtn.addEventListener('click', e => {
       location.href = '/notice';
     });
-    }*/
+    }
+
+
 </script>
 </body>
 </html>
