--- a/src/main/resources/templates/notice/noticeViewForm.html
+++ b/src/main/resources/templates/notice/noticeViewForm.html
@@ -8,7 +8,23 @@
   <script src="https://kit.fontawesome.com/844acb7e4d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/notice/noticeView.css">
   <link rel="stylesheet" href="/css/common/common.css">
-  <title>GREAT 공지사항 작성글보기</title>
+  <script th:src="@{/css/common/js/ckeditor.js}"></script>
+  <title>GREAT 공지사항글보기</title>
+  <style>
+
+
+    #notice__delBtn, #submit_btn{
+       background-color: var(--main-color-yel);
+        margin: 5px 0 10px 5px;
+        border: none;
+        border-radius: 8px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+  </style>
+
+
 <body>
 <div class="wrapper">
   <header class="header container">
@@ -55,7 +71,6 @@
       <div class="notice__title ">
         <h2>글 제목 :
           <text th:text="*{title}">[공지사항] 개인정보 처리방침 변경안내처리방침</text>
-          <text th:text="*{noticeId}">[공지사항] 개인정보 처리방침 변경안내처리방침</text>
         </h2>
         <div class="notice__information">
           <div class="notice__write-information">
@@ -64,7 +79,7 @@
         </div>
       </div>
       <div class="notice__content ">
-          <textarea th:text="*{content}" cols="140" rows="30"
+          <textarea th:text="*{content}" id="noticeContent" cols="140" rows="30"
                     name="content" readonly>[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침[공지사항] 개인정보 처리방침 변경안내처리방침 </textarea>
 
         <div class="notice__btn-box">
@@ -126,6 +141,72 @@
         if(!confirm('삭제하시겠습니까?')) return;
       location.href = '/notice/[[${detailForm.noticeId}]]/del';
     });
+
+    //ckeditor
+    ClassicEditor
+		.create( document.querySelector( '#noticeContent' ), {
+		 plugin:['ListStyle','Markdown','MediaEmbed','MediaEmbedToolbar'],
+			toolbar: {
+				items: [
+					'heading',
+					'|',
+					'underline',
+					'bold',
+					'italic',
+					'link',
+					'bulletedList',
+					'numberedList',
+					'todoList',
+					'|',
+					'outdent',
+					'indent',
+					'|',
+					'imageInsert',
+					'imageUpload',
+					'blockQuote',
+					'insertTable',
+					'mediaEmbed',
+					'markdown',
+					'undo',
+					'redo',
+					'|',
+					'highlight',
+					'fontFamily',
+					'fontColor',
+					'fontBackgroundColor',
+					'fontSize',
+					'|',
+					'htmlEmbed',
+					'specialCharacters'
+				]
+			},
+			language: 'en',
+			image: {
+				toolbar: [
+					'imageTextAlternative',
+					'imageStyle:full',
+					'imageStyle:side'
+				]
+			},
+			table: {
+				contentToolbar: [
+					'tableColumn',
+					'tableRow',
+					'mergeTableCells',
+					'tableCellProperties',
+					'tableProperties'
+				]
+			},
+		})
+		.then( editor => {
+
+			window.editor = editor;
+			editor.isReadOnly = true;  //읽기모드적용
+		} )
+		.catch( error => {
+			console.error( error );
+		} );
+
 </script>
 </body>
 </head></head></html>
