--- a/src/main/resources/templates/notice/noticeMainForm.html
+++ b/src/main/resources/templates/notice/noticeMainForm.html
@@ -8,7 +8,7 @@
   <script src="https://kit.fontawesome.com/844acb7e4d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/notice/noticeMain.css">
   <link rel="stylesheet" href="/css/common/common.css">
-  <title>GREAT 공지사항 보기글</title>
+  <title>GREAT 공지사항</title>
 </head>
 
 <body>
