--- a/src/main/resources/templates/notice/noticeWriteForm.html
+++ b/src/main/resources/templates/notice/noticeWriteForm.html
@@ -8,7 +8,24 @@
   <script src="https://kit.fontawesome.com/844acb7e4d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/notice/noticeWrite.css">
   <link rel="stylesheet" href="/css/common/common.css">
-  <title>공지사항 글작성</title>
+  <script th:src="@{/css/common/js/ckeditor.js}"></script>
+  <title>GREAT 공지사항작성</title>
+  <style>
+    .notice__errors{
+      color: red;
+    }
+
+    #notice__cancel-btn, #notice__complete-btn {
+      background-color: var(--main-color-yel);
+      margin: 5px 0 10px 5px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+
+  </style>
 </head>
 <body>
 <div class="wrapper">
@@ -56,22 +73,17 @@
       <div class="notice-board__title width--1000px">
         <h2><i class="bar"></i>글쓰기</h2>
       </div>
-      <div class="notice-board__head width--900px">
-        <div class="notice-board__headtitle">제목:
-          <input  type="text" name="title" id="noticeTitle" placeholder="제목을 입력하세요."  autofocus>
-        </div>
+      <div class="notice-board__headtitle width--900px">
+        <input type="text" name="title" id="noticeTitle" placeholder="제목을 입력하세요." autofocus th:field="*{title}">
+      </div>
+      <div class="notice__errors">
+        <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></p>
       </div>
       <div class="notice-board__main width--1000px">
-          <textarea  class="notice-board__content" name="content" id="noticeContent" cols="30" rows="10" placeholder="내용을 작성하세요. 500글자"
+          <textarea  class="notice-board__content" name="content" id="noticeContent" cols="30" rows="100" placeholder="내용을 작성하세요. 500글자"
                     autofocus maxlength="300"></textarea>
         <div class="notice__write-information">
 
-        </div>
-        <div class="insert">
-          <div>
-            <input type="file" onchange="addFile(this);" multiple />
-            <div class="file-list"></div>
-          </div>
         </div>
       </div>
       <div class="notice-board__complete width--1000px" th:action="@{/notice}">
@@ -116,15 +128,101 @@
     $summitBtn.addEventListener('click', e => {
       location.href = '/notice/{id}';
     });
-    }
+
 
 
     const $cancelBtn = document.getElementById('notice__cancel-btn');
     $cancelBtn.addEventListener('click', e => {
-      location.href = '/notice';
+      location.href = '/notice/list';
     });
+
+
+          //유효성 체크 함수
+    function validChk() {
+      const regex = / /gi;
+      //제목 입력 필수
+      if (noticeTitle.value.replace(regex, '').length == 0) {
+        alert('제목을 입력해주세요.');
+        return;
+      }
+      //제목 50자 이하
+      if (noticeTitle.value.length > 50) {
+        alert('제목은 50자 이내여야합니다.');
+        return;
+      }
+      //내용 입력 필수
+      if (window.editor.getData().length == 0) {
+        alert('내용을 입력해주세요.');
+        return;
+      }
+
+      return true;
     }
 
+
+//ckeditor
+    ClassicEditor
+		.create( document.querySelector( '#noticeContent' ), {
+		 plugin:['ListStyle','Markdown','MediaEmbed','MediaEmbedToolbar'],
+			toolbar: {
+				items: [
+					'heading',
+					'|',
+					'underline',
+					'bold',
+					'italic',
+					'link',
+					'bulletedList',
+					'numberedList',
+					'todoList',
+					'|',
+					'outdent',
+					'indent',
+					'|',
+					'imageInsert',
+					'imageUpload',
+					'blockQuote',
+					'insertTable',
+					'mediaEmbed',
+					'markdown',
+					'undo',
+					'redo',
+					'|',
+					'highlight',
+					'fontFamily',
+					'fontColor',
+					'fontBackgroundColor',
+					'fontSize',
+					'|',
+					'htmlEmbed',
+					'specialCharacters'
+				]
+			},
+			language: 'en',
+			image: {
+				toolbar: [
+					'imageTextAlternative',
+					'imageStyle:full',
+					'imageStyle:side'
+				]
+			},
+			table: {
+				contentToolbar: [
+					'tableColumn',
+					'tableRow',
+					'mergeTableCells',
+					'tableCellProperties',
+					'tableProperties'
+				]
+			},
+		})
+		.then( editor => {
+
+			window.editor = editor;
+		} )
+		.catch( error => {
+			console.error( error );
+		} );
 
 </script>
 </body>
